some minor improvment
